[project]
name = "autoencoder-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlflow>=3.1.1",
    "numpy==1.26.4",
    "opencv-python>=4.11.0.86",
    "tqdm>=4.67.1",
]

[tool.uv.workspace]
members = [
    "test",
]
